samples/_failures_safe/1761194043_0e1253_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b2954e83.c: In function ‘initialize_state_machine’:
./samples/SAFE/__tmp_b2954e83.c:145:22: error: expected ‘;’ at end of input
  145 |     sm->current_state
      |                      ^
      |                      ;
./samples/SAFE/__tmp_b2954e83.c:145:5: error: expected declaration or statement at end of input
  145 |     sm->current_state
      |     ^~
